tests/NormalTests/paczka1/fuzzy1/88881630.err
Error in line 1: 0Oqiv A339 99,5
Error in line 9: A6JB A339 84,7
Error in line 20: 12T5sm A339 82,6
Error in line 29: DlbyQ A298 32,7
Error in line 38: 1{T5sm S367 8,3
